# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
.github/workflows/: audit-on-push.yml  general.yml  main.yml  scheduled-audit.yml
configuration/: base.yaml
migrations/: 20201211060551_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
