[package]
name = "chapter03-0"
version = "0.1.0"
authors = ["gihrig <glen@arkadias.com>"]
edition = "2018"

[lib]
# Following the community convention, if `name` is unspecified,
# cargo will default to `package.name`, which is what we want.
# We could specify a library name using the `name` field.
path = "src/lib.rs"

# A project can only have one library, but it can have multiple
# binaries, specified as an array in double brakets [[]]
# To manage multiple libraries in the same repository
# have a look at the workspace feature - Covered later on.
[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.2.0"

[dev-dependencies]
reqwest = "0.10.8"
tokio = "0.2.22"
