[package]
name = "zero2prod"
version = "0.1.0"
authors = ["LukeMathWalker <rust@lpalmieri.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# Following the community convention, if `name` is unspecified,
# cargo will default to `package.name`, which is what we want.
# We could specify a library name using the `name` field.
path = "src/lib.rs"

# A project can only have one library, but it can have multiple
# binaries, specified as an array in double brakets [[]]
# To manage multiple libraries in the same repository
# have a look at the workspace feature - Covered later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.2.0"
tokio = "0.2.22"
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.4.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.10.1"

[dev-dependencies]
reqwest = "0.10.8"
